--- a/test/fixtures/groups.yml
+++ b/test/fixtures/groups.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
-  name: MyString
-  number: MyString
+grp001:
+  id: 1
+  name: Java Course
+  number: 001
 
-two:
-  name: MyString
-  number: MyString
+grp002:
+  id: 2
+  name: Application Course
+  number: 002
