--- a/test/fixtures/registered_classes.yml
+++ b/test/fixtures/registered_classes.yml
@@ -1,7 +1,4 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
-  section_id: 1
-
-two:
-  section_id: 1
+#one:
+#  section_id: 1
