--- a/test/fixtures/requirements.yml
+++ b/test/fixtures/requirements.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  class_id: 1
+  course_id: 1
   needs_id: 1
 
 two:
-  class_id: 1
+  course_id: 1
   needs_id: 1
