--- a/test/fixtures/passed_classes.yml
+++ b/test/fixtures/passed_classes.yml
@@ -1,4 +1,4 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-
+# Everybody's got something to hide except for me and my monkey
 csc116:
   course_id: 1
