--- a/test/fixtures/degree_requirements.yml
+++ b/test/fixtures/degree_requirements.yml
@@ -1,41 +1,41 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 java1:
-  course_id: 1
-  group_id: 1
+  course: csc116
+  group: grpJava
 
 java2:
-  course_id: 2
-  group_id: 1
+  course_id: csc216
+  group_id: grpJava
 
 appl1:
-  course_id: 3
-  group_id: 2
+  course_id: csc226
+  group_id: grpApplication
 
 appl2:
-  course_id: 4
-  group_id: 2
+  course_id: csc316
+  group_id: grpApplication
 
 appl3:
-  course_id: 5
-  group_id: 2
+  course_id: csc326
+  group_id: grpApplication
 
 history1:
-  course_id: 8
-  group_id: 3
+  course_id: hi208
+  group_id: grpHistory
 
 history2:
-  course_id: 9
-  group_id: 3
+  course_id: hi210
+  group_id: grpHistory
 
 advanced1:
-  course_id: 10
-  group_id: 4
+  course_id: csc440
+  group_id: grpAdvancedCSC
 
 advanced2:
-  course_id: 11
-  group_id: 4
+  course_id: csc454
+  group_id: grpAdvancedCSC
 
 advanced3:
-  course_id: 12
-  group_id: 4
+  course_id: csc405
+  group_id: grpAdvancedCSC
