--- a/test/fixtures/sections.yml
+++ b/test/fixtures/sections.yml
@@ -1,9 +1,8 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 csc116_001:
-  id: 1
-  course_id: 1
-  semester_id: 1
+  course: csc116
+  semester: fall2009
   room: EB2 1231
   professor: Jamison
   number: 001
@@ -13,9 +12,8 @@ csc116_001:
   seats: 30
 
 csc216_001:
-  id: 2
-  course_id: 2
-  semester_id: 1
+  course: csc216
+  semester: fall2009
   room: EB2 1231
   professor: Bob Dylan
   number: 001
@@ -25,9 +23,8 @@ csc216_001:
   seats: 10
 
 csc216_002:
-  id: 3
-  course_id: 2
-  semester_id: 1
+  course: csc216
+  semester: fall2009
   room: EB2 1231
   professor: Brian May
   number: 002
@@ -37,9 +34,8 @@ csc216_002:
   seats: 15
   
 csc216_003:
-  id: 4
-  course_id: 2
-  semester_id: 1
+  course: csc216
+  semester: fall2009
   room: EB1 1006
   number: 003
   professor: Michael Scott
@@ -49,9 +45,8 @@ csc216_003:
   seats: 20
   
 csc226_001:
-  id: 5
-  course_id: 3
-  semester_id: 1
+  course: csc226
+  semester: fall2009
   room: EB2 2235
   number: 001
   professor: Malcolm Reynolds
@@ -61,9 +56,8 @@ csc226_001:
   seats: 2
   
 csc226_002:
-  id: 6
-  course_id: 3
-  semester_id: 1
+  course: csc226
+  semester: fall2009
   room: EB2 1234
   number: 002
   professor: Jayne Cobb
@@ -73,9 +67,8 @@ csc226_002:
   seats: 4
 
 csc316_001:
-  id: 7
-  course_id: 4
-  semester_id: 1
+  course: csc316
+  semester: fall2009
   room: EB1 1111
   number: 001
   professor: Fwiffo Spathi
@@ -85,21 +78,19 @@ csc316_001:
   seats: 9
 
 csc316_002:
-  id: 8
-  course_id: 4
-  semester_id: 1
+  course: csc316
+  semester: fall2009
   room: EB2 2222
   number: 002
   professor: Sauron
   days: TH
   begin_time: 2009-11-17 11:45:00
-  end_time 2009-11-17 13:00:00
+  end_time: 2009-11-17 13:00:00
   seats: 0
   
 csc326_001:
-  id: 9
-  course_id: 5
-  semester_id: 1
+  course: csc326
+  semester: fall2009
   room: EB1 2222
   number: 001
   professor: Harper Lee
@@ -109,9 +100,8 @@ csc326_001:
   seats: 24
   
 csc333_001:
-  id: 10
-  course_id: 6
-  semester_id: 1
+  course: csc333
+  semester: fall2009
   room: EB1 1045
   number: 001
   professor: Shusaku Endo
@@ -121,9 +111,8 @@ csc333_001:
   seats: 6
   
 eng101_001:
-  id: 11
-  course_id: 7
-  semester_id: 1
+  course: eng101
+  semester: fall2009
   room: WI 106
   number: 001
   professor: Bob Woodward
@@ -133,9 +122,8 @@ eng101_001:
   seats: 10
   
 eng101_002:
-  id: 12
-  course_id: 7
-  semester_id: 1
+  course: eng101
+  semester: fall2009
   room: DAB 202
   number: 002
   professor: William Shakespeare
@@ -145,9 +133,8 @@ eng101_002:
   seats: 0
   
 eng101_003:
-  id: 13
-  course_id: 7
-  semester_id: 1
+  course: eng101
+  semester: fall2009
   room: WI 102G
   number: 003
   professor: JRR Tolkien
@@ -157,9 +144,8 @@ eng101_003:
   seats: 28
   
 hi208_001:
-  id: 14
-  course_id: 8
-  semester_id: 1
+  course: hi208
+  semester: fall2009
   room: HA 123
   number: 001
   professor: El Cid
@@ -169,9 +155,8 @@ hi208_001:
   seats: 3
 
 hi208_002:
-  id: 15
-  course_id: 8
-  semester_id: 1
+  course: hi208
+  semester: fall2009
   room: WI 150
   number: 002
   professor: Peter Abelard
@@ -181,9 +166,8 @@ hi208_002:
   seats: 1
 
 hi208_003:
-  id: 16
-  course_id: 8
-  semester_id: 1
+  course: hi208
+  semester: fall2009
   room: HA 111
   number: 003
   professor: Frederick Barbarossa
@@ -193,9 +177,8 @@ hi208_003:
   seats: 0
   
 hi210_001:
-  id: 17
-  course_id: 9
-  semester: 1
+  course: hi210
+  semester: fall2009
   room: HA 128
   number: 001
   professor: Otto von Bismarck
@@ -205,9 +188,8 @@ hi210_001:
   seats: 2
   
 csc440_001:
-  id: 18
-  course_id: 10
-  semester: 1
+  course: csc440
+  semester: fall2009
   room: EB2 1984
   professor: Freddie Mercury
   number: 001
@@ -217,9 +199,8 @@ csc440_001:
   seats: 5
   
 csc454_001:
-  id: 19
-  course_id: 11
-  semester: 1
+  course: csc454
+  semester: fall2009
   room: EB1 1029
   professor: Darth Vader
   number: 001
@@ -229,9 +210,8 @@ csc454_001:
   seats: 9
 
 csc405_001:
-  id: 20
-  course_id: 12
-  semester: 1
+  course: csc405
+  semester: fall2009
   room: EB2 1228
   professor: Groucho Marx
   number: 001
