--- a/test/fixtures/sections.yml
+++ b/test/fixtures/sections.yml
@@ -1,17 +1,21 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-csc116_001:
+# Dates in datetime values are unused and arbitrary
+
+# fall 2009 sections
+
+fa09csc116_001:
   course: csc116
   semester: fall2009
   room: EB2 1231
   professor: Jamison
   number: 001
-  begin_time: 2009-11-17 09:10:00 # Dates are unused and arbitrary
+  begin_time: 2009-11-17 09:10:00
   end_time: 2009-11-17 10:00:00
   days: MWF
   seats: 30
 
-csc216_001:
+fa09csc216_001:
   course: csc216
   semester: fall2009
   room: EB2 1231
@@ -22,7 +26,7 @@ csc216_001:
   days: MWF
   seats: 10
 
-csc216_002:
+fa09csc216_002:
   course: csc216
   semester: fall2009
   room: EB2 1231
@@ -32,8 +36,8 @@ csc216_002:
   end_time: 2009-11-17 10:30:00
   days: TH
   seats: 15
-  
-csc216_003:
+
+fa09csc216_003:
   course: csc216
   semester: fall2009
   room: EB1 1006
@@ -43,8 +47,8 @@ csc216_003:
   begin_time: 2009-11-17 08:00:00
   end_time: 2009-11-17 08:50:00
   seats: 20
-  
-csc226_001:
+
+fa09csc226_001:
   course: csc226
   semester: fall2009
   room: EB2 2235
@@ -54,8 +58,8 @@ csc226_001:
   begin_time: 2009-11-17 09:00:00
   end_time: 2009-11-17 10:15:00
   seats: 2
-  
-csc226_002:
+
+fa09csc226_002:
   course: csc226
   semester: fall2009
   room: EB2 1234
@@ -66,7 +70,7 @@ csc226_002:
   end_time: 2009-11-17 09:15:00
   seats: 4
 
-csc316_001:
+fa09csc316_001:
   course: csc316
   semester: fall2009
   room: EB1 1111
@@ -77,7 +81,7 @@ csc316_001:
   end_time: 2009-11-17 13:00:00
   seats: 9
 
-csc316_002:
+fa09csc316_002:
   course: csc316
   semester: fall2009
   room: EB2 2222
@@ -87,8 +91,8 @@ csc316_002:
   begin_time: 2009-11-17 11:45:00
   end_time: 2009-11-17 13:00:00
   seats: 0
-  
-csc326_001:
+
+fa09csc326_001:
   course: csc326
   semester: fall2009
   room: EB1 2222
@@ -98,8 +102,8 @@ csc326_001:
   begin_time: 2009-11-17 13:45:00
   end_time: 2009-11-17 14:35:00
   seats: 24
-  
-csc333_001:
+
+fa09csc333_001:
   course: csc333
   semester: fall2009
   room: EB1 1045
@@ -109,8 +113,8 @@ csc333_001:
   begin_time: 2009-11-17 12:15:00
   end_time: 2009-11-17 13:30:00
   seats: 6
-  
-eng101_001:
+
+fa09eng101_001:
   course: eng101
   semester: fall2009
   room: WI 106
@@ -120,8 +124,8 @@ eng101_001:
   begin_time: 2009-11-17 08:00:00
   end_time: 2009-11-17 08:50:00
   seats: 10
-  
-eng101_002:
+
+fa09eng101_002:
   course: eng101
   semester: fall2009
   room: DAB 202
@@ -131,8 +135,8 @@ eng101_002:
   begin_time: 2009-11-17 09:15:00
   end_time: 2009-11-17 10:30:00
   seats: 0
-  
-eng101_003:
+
+fa09eng101_003:
   course: eng101
   semester: fall2009
   room: WI 102G
@@ -142,8 +146,8 @@ eng101_003:
   begin_time: 2009-11-17 18:15:00
   end_time: 2009-11-17 19:30:00
   seats: 28
-  
-hi208_001:
+
+fa09hi208_001:
   course: hi208
   semester: fall2009
   room: HA 123
@@ -154,7 +158,7 @@ hi208_001:
   end_time: 2009-11-17 15:15:00
   seats: 3
 
-hi208_002:
+fa09hi208_002:
   course: hi208
   semester: fall2009
   room: WI 150
@@ -165,7 +169,7 @@ hi208_002:
   end_time: 2009-11-17 15:15:00
   seats: 1
 
-hi208_003:
+fa09hi208_003:
   course: hi208
   semester: fall2009
   room: HA 111
@@ -175,8 +179,8 @@ hi208_003:
   begin_time: 2009-11-17 13:45:00
   end_time: 2009-11-17 15:00:00
   seats: 0
-  
-hi210_001:
+
+fa09hi210_001:
   course: hi210
   semester: fall2009
   room: HA 128
@@ -186,8 +190,8 @@ hi210_001:
   begin_time: 2009-11-17 14:30:00
   end_time: 2009-11-17 15:45:00
   seats: 2
-  
-csc440_001:
+
+fa09csc440_001:
   course: csc440
   semester: fall2009
   room: EB2 1984
@@ -197,19 +201,19 @@ csc440_001:
   begin_time: 2009-11-17 14:30:00
   end_time: 2009-11-17 15:45:00
   seats: 5
-  
-csc454_001:
+
+fa09csc454_001:
   course: csc454
   semester: fall2009
   room: EB1 1029
   professor: Darth Vader
   number: 001
-  days: TH 
+  days: TH
   begin_time: 2009-11-17 14:30:00
   end_time: 2009-11-17 15:45:00
   seats: 9
 
-csc405_001:
+fa09csc405_001:
   course: csc405
   semester: fall2009
   room: EB2 1228
@@ -219,4 +223,226 @@ csc405_001:
   begin_time: 2009-11-17 16:00:00
   end_time: 2009-11-17 17:30:00
   seats: 2
-  
+
+
+# spring 2010 sections
+
+sp10csc116_001:
+  course: csc116
+  semester: spring2010
+  room: EB2 1231
+  professor: Jamison
+  number: 001
+  begin_time: 2009-11-17 09:10:00
+  end_time: 2009-11-17 10:00:00
+  days: MWF
+  seats: 30
+
+sp10csc216_001:
+  course: csc216
+  semester: spring2010
+  room: EB2 1231
+  professor: Bob Dylan
+  number: 001
+  begin_time: 2009-11-17 10:15:00
+  end_time: 2009-11-17 11:30:00
+  days: MWF
+  seats: 10
+
+sp10csc216_002:
+  course: csc216
+  semester: spring2010
+  room: EB2 1231
+  professor: Brian May
+  number: 002
+  begin_time: 2009-11-17 09:00:00
+  end_time: 2009-11-17 10:30:00
+  days: TH
+  seats: 15
+
+sp10csc216_003:
+  course: csc216
+  semester: spring2010
+  room: EB1 1006
+  number: 003
+  professor: Michael Scott
+  days: MWF
+  begin_time: 2009-11-17 08:00:00
+  end_time: 2009-11-17 08:50:00
+  seats: 20
+
+sp10csc226_001:
+  course: csc226
+  semester: spring2010
+  room: EB2 2235
+  number: 001
+  professor: Malcolm Reynolds
+  days: MW
+  begin_time: 2009-11-17 09:00:00
+  end_time: 2009-11-17 10:15:00
+  seats: 2
+
+sp10csc226_002:
+  course: csc226
+  semester: spring2010
+  room: EB2 1234
+  number: 002
+  professor: Jayne Cobb
+  days: TH
+  begin_time: 2009-11-17 08:00:00
+  end_time: 2009-11-17 09:15:00
+  seats: 4
+
+sp10csc316_001:
+  course: csc316
+  semester: spring2010
+  room: EB1 1111
+  number: 001
+  professor: Fwiffo Spathi
+  days: WF
+  begin_time: 2009-11-17 11:45:00
+  end_time: 2009-11-17 13:00:00
+  seats: 9
+
+sp10csc316_002:
+  course: csc316
+  semester: spring2010
+  room: EB2 2222
+  number: 002
+  professor: Sauron
+  days: TH
+  begin_time: 2009-11-17 11:45:00
+  end_time: 2009-11-17 13:00:00
+  seats: 0
+
+sp10csc326_001:
+  course: csc326
+  semester: spring2010
+  room: EB1 2222
+  number: 001
+  professor: Harper Lee
+  days: MWF
+  begin_time: 2009-11-17 13:45:00
+  end_time: 2009-11-17 14:35:00
+  seats: 24
+
+sp10csc333_001:
+  course: csc333
+  semester: spring2010
+  room: EB1 1045
+  number: 001
+  professor: Shusaku Endo
+  days: TH
+  begin_time: 2009-11-17 12:15:00
+  end_time: 2009-11-17 13:30:00
+  seats: 6
+
+sp10eng101_001:
+  course: eng101
+  semester: spring2010
+  room: WI 106
+  number: 001
+  professor: Bob Woodward
+  days: MTWH
+  begin_time: 2009-11-17 08:00:00
+  end_time: 2009-11-17 08:50:00
+  seats: 10
+
+sp10eng101_002:
+  course: eng101
+  semester: spring2010
+  room: DAB 202
+  number: 002
+  professor: William Shakespeare
+  days: MTWF
+  begin_time: 2009-11-17 09:15:00
+  end_time: 2009-11-17 10:30:00
+  seats: 0
+
+sp10eng101_003:
+  course: eng101
+  semester: spring2010
+  room: WI 102G
+  number: 003
+  professor: JRR Tolkien
+  days: MTWF
+  begin_time: 2009-11-17 18:15:00
+  end_time: 2009-11-17 19:30:00
+  seats: 28
+
+sp10hi208_001:
+  course: hi208
+  semester: spring2010
+  room: HA 123
+  number: 001
+  professor: El Cid
+  days: MW
+  begin_time: 2009-11-17 14:00:00
+  end_time: 2009-11-17 15:15:00
+  seats: 3
+
+sp10hi208_002:
+  course: hi208
+  semester: spring2010
+  room: WI 150
+  number: 002
+  professor: Peter Abelard
+  days: TH
+  begin_time: 2009-11-17 14:00:00
+  end_time: 2009-11-17 15:15:00
+  seats: 1
+
+sp10hi208_003:
+  course: hi208
+  semester: spring2010
+  room: HA 111
+  number: 003
+  professor: Frederick Barbarossa
+  days: MW
+  begin_time: 2009-11-17 13:45:00
+  end_time: 2009-11-17 15:00:00
+  seats: 0
+
+sp10hi210_001:
+  course: hi210
+  semester: spring2010
+  room: HA 128
+  number: 001
+  professor: Otto von Bismarck
+  days: MW
+  begin_time: 2009-11-17 14:30:00
+  end_time: 2009-11-17 15:45:00
+  seats: 2
+
+sp10csc440_001:
+  course: csc440
+  semester: spring2010
+  room: EB2 1984
+  professor: Freddie Mercury
+  number: 001
+  days: MW
+  begin_time: 2009-11-17 14:30:00
+  end_time: 2009-11-17 15:45:00
+  seats: 5
+
+sp10csc454_001:
+  course: csc454
+  semester: spring2010
+  room: EB1 1029
+  professor: Darth Vader
+  number: 001
+  days: TH
+  begin_time: 2009-11-17 14:30:00
+  end_time: 2009-11-17 15:45:00
+  seats: 9
+
+sp10csc405_001:
+  course: csc405
+  semester: spring2010
+  room: EB2 1228
+  professor: Groucho Marx
+  number: 001
+  days: MW
+  begin_time: 2009-11-17 16:00:00
+  end_time: 2009-11-17 17:30:00
+  seats: 2
