--- a/test/fixtures/sections.yml
+++ b/test/fixtures/sections.yml
@@ -7,7 +7,7 @@ fa09csc116_001:
   semester: fall2009
   room: EB2 1231
   professor: Jamison
-  number: 001
+  number: "001"
   begin_time: 2009-11-17 09:10:00
   end_time: 2009-11-17 10:00:00
   days: MWF
@@ -18,7 +18,7 @@ fa09csc116_001:
   semester: fall2009
   room: EB2 1231
   professor: Bob Dylan
-  number: 001
+  number: "001"
   begin_time: 2009-11-17 10:15:00
   end_time: 2009-11-17 11:30:00
   days: MWF
@@ -29,7 +29,7 @@ fa09csc116_002:
   semester: fall2009
   room: EB2 1231
   professor: Brian May
-  number: 002
+  number: "002"
   begin_time: 2009-11-17 09:00:00
   end_time: 2009-11-17 10:30:00
   days: TH
@@ -39,7 +39,7 @@ fa09csc116_003:
   course: csc116
   semester: fall2009
   room: EB1 1006
-  number: 003
+  number: "003"
   professor: Michael Scott
   days: MWF
   begin_time: 2009-11-17 08:00:00
@@ -50,7 +50,7 @@ fa09csc226_001:
   course: csc226
   semester: fall2009
   room: EB2 2235
-  number: 001
+  number: "001"
   professor: Malcolm Reynolds
   days: MW
   begin_time: 2009-11-17 09:00:00
@@ -61,7 +61,7 @@ fa09csc226_002:
   course: csc226
   semester: fall2009
   room: EB2 1234
-  number: 002
+  number: "002"
   professor: Jayne Cobb
   days: TH
   begin_time: 2009-11-17 08:00:00
@@ -72,7 +72,7 @@ fa09csc316_001:
   course: csc316
   semester: fall2009
   room: EB1 1111
-  number: 001
+  number: "001"
   professor: Fwiffo Spathi
   days: WF
   begin_time: 2009-11-17 11:45:00
@@ -83,7 +83,7 @@ fa09csc316_002:
   course: csc316
   semester: fall2009
   room: EB2 2222
-  number: 002
+  number: "002"
   professor: Sauron
   days: TH
   begin_time: 2009-11-17 11:45:00
@@ -94,7 +94,7 @@ fa09csc326_001:
   course: csc326
   semester: fall2009
   room: EB1 2222
-  number: 001
+  number: "001"
   professor: Harper Lee
   days: MWF
   begin_time: 2009-11-17 13:45:00
@@ -105,7 +105,7 @@ fa09csc333_001:
   course: csc333
   semester: fall2009
   room: EB1 1045
-  number: 001
+  number: "001"
   professor: Shusaku Endo
   days: TH
   begin_time: 2009-11-17 12:15:00
@@ -116,7 +116,7 @@ fa09eng101_001:
   course: eng101
   semester: fall2009
   room: WI 106
-  number: 001
+  number: "001"
   professor: Bob Woodward
   days: MTWH
   begin_time: 2009-11-17 08:00:00
@@ -127,7 +127,7 @@ fa09eng101_002:
   course: eng101
   semester: fall2009
   room: DAB 202
-  number: 002
+  number: "002"
   professor: William Shakespeare
   days: MTWF
   begin_time: 2009-11-17 09:15:00
@@ -138,7 +138,7 @@ fa09eng101_003:
   course: eng101
   semester: fall2009
   room: WI 102G
-  number: 003
+  number: "003"
   professor: JRR Tolkien
   days: MTWF
   begin_time: 2009-11-17 18:15:00
@@ -149,7 +149,7 @@ fa09hi208_001:
   course: hi208
   semester: fall2009
   room: HA 123
-  number: 001
+  number: "001"
   professor: El Cid
   days: MW
   begin_time: 2009-11-17 14:00:00
@@ -160,7 +160,7 @@ fa09hi208_002:
   course: hi208
   semester: fall2009
   room: WI 150
-  number: 002
+  number: "002"
   professor: Peter Abelard
   days: TH
   begin_time: 2009-11-17 14:00:00
@@ -171,7 +171,7 @@ fa09hi208_003:
   course: hi208
   semester: fall2009
   room: HA 111
-  number: 003
+  number: "003"
   professor: Frederick Barbarossa
   days: MW
   begin_time: 2009-11-17 13:45:00
@@ -182,7 +182,7 @@ fa09hi210_001:
   course: hi210
   semester: fall2009
   room: HA 128
-  number: 001
+  number: "001"
   professor: Otto von Bismarck
   days: MW
   begin_time: 2009-11-17 14:30:00
@@ -194,7 +194,7 @@ fa09csc440_001:
   semester: fall2009
   room: EB2 1984
   professor: Freddie Mercury
-  number: 001
+  number: "001"
   days: MW
   begin_time: 2009-11-17 14:30:00
   end_time: 2009-11-17 15:45:00
@@ -205,7 +205,7 @@ fa09csc454_001:
   semester: fall2009
   room: EB1 1029
   professor: Darth Vader
-  number: 001
+  number: "001"
   days: TH
   begin_time: 2009-11-17 14:30:00
   end_time: 2009-11-17 15:45:00
@@ -216,7 +216,7 @@ fa09csc405_001:
   semester: fall2009
   room: EB2 1228
   professor: Groucho Marx
-  number: 001
+  number: "001"
   days: MW
   begin_time: 2009-11-17 16:00:00
   end_time: 2009-11-17 17:30:00
@@ -230,7 +230,7 @@ sp10csc216_001:
   semester: spring2010
   room: EB2 1231
   professor: Jamison
-  number: 001
+  number: "001"
   begin_time: 2009-11-17 09:10:00
   end_time: 2009-11-17 10:00:00
   days: MWF
@@ -241,7 +241,7 @@ sp10csc216_001:
   semester: spring2010
   room: EB2 1231
   professor: Bob Dylan
-  number: 001
+  number: "001"
   begin_time: 2009-11-17 10:15:00
   end_time: 2009-11-17 11:30:00
   days: MWF
@@ -252,7 +252,7 @@ sp10csc216_002:
   semester: spring2010
   room: EB2 1231
   professor: Brian May
-  number: 002
+  number: "002"
   begin_time: 2009-11-17 09:00:00
   end_time: 2009-11-17 10:30:00
   days: TH
@@ -262,7 +262,7 @@ sp10csc216_003:
   course: csc216
   semester: spring2010
   room: EB1 1006
-  number: 003
+  number: "003"
   professor: Michael Scott
   days: MWF
   begin_time: 2009-11-17 08:00:00
@@ -273,7 +273,7 @@ sp10csc226_001:
   course: csc226
   semester: spring2010
   room: EB2 2235
-  number: 001
+  number: "001"
   professor: Malcolm Reynolds
   days: MW
   begin_time: 2009-11-17 09:00:00
@@ -284,7 +284,7 @@ sp10csc226_002:
   course: csc226
   semester: spring2010
   room: EB2 1234
-  number: 002
+  number: "002"
   professor: Jayne Cobb
   days: TH
   begin_time: 2009-11-17 08:00:00
@@ -295,7 +295,7 @@ sp10csc316_001:
   course: csc316
   semester: spring2010
   room: EB1 1111
-  number: 001
+  number: "001"
   professor: Fwiffo Spathi
   days: WF
   begin_time: 2009-11-17 11:45:00
@@ -306,7 +306,7 @@ sp10csc316_002:
   course: csc316
   semester: spring2010
   room: EB2 2222
-  number: 002
+  number: "002"
   professor: Sauron
   days: TH
   begin_time: 2009-11-17 11:45:00
@@ -317,7 +317,7 @@ sp10csc326_001:
   course: csc326
   semester: spring2010
   room: EB1 2222
-  number: 001
+  number: "001"
   professor: Harper Lee
   days: MWF
   begin_time: 2009-11-17 13:45:00
@@ -328,7 +328,7 @@ sp10csc333_001:
   course: csc333
   semester: spring2010
   room: EB1 1045
-  number: 001
+  number: "001"
   professor: Shusaku Endo
   days: TH
   begin_time: 2009-11-17 12:15:00
@@ -339,7 +339,7 @@ sp10eng101_001:
   course: eng101
   semester: spring2010
   room: WI 106
-  number: 001
+  number: "001"
   professor: Bob Woodward
   days: MTWH
   begin_time: 2009-11-17 08:00:00
@@ -350,7 +350,7 @@ sp10eng101_002:
   course: eng101
   semester: spring2010
   room: DAB 202
-  number: 002
+  number: "002"
   professor: William Shakespeare
   days: MTWF
   begin_time: 2009-11-17 09:15:00
@@ -361,7 +361,7 @@ sp10eng101_003:
   course: eng101
   semester: spring2010
   room: WI 102G
-  number: 003
+  number: "003"
   professor: JRR Tolkien
   days: MTWF
   begin_time: 2009-11-17 18:15:00
@@ -372,7 +372,7 @@ sp10hi208_001:
   course: hi208
   semester: spring2010
   room: HA 123
-  number: 001
+  number: "001"
   professor: El Cid
   days: MW
   begin_time: 2009-11-17 14:00:00
@@ -383,7 +383,7 @@ sp10hi208_002:
   course: hi208
   semester: spring2010
   room: WI 150
-  number: 002
+  number: "002"
   professor: Peter Abelard
   days: TH
   begin_time: 2009-11-17 14:00:00
@@ -394,7 +394,7 @@ sp10hi208_003:
   course: hi208
   semester: spring2010
   room: HA 111
-  number: 003
+  number: "003"
   professor: Frederick Barbarossa
   days: MW
   begin_time: 2009-11-17 13:45:00
@@ -405,7 +405,7 @@ sp10hi210_001:
   course: hi210
   semester: spring2010
   room: HA 128
-  number: 001
+  number: "001"
   professor: Otto von Bismarck
   days: MW
   begin_time: 2009-11-17 14:30:00
@@ -417,7 +417,7 @@ sp10csc440_001:
   semester: spring2010
   room: EB2 1984
   professor: Freddie Mercury
-  number: 001
+  number: "001"
   days: MW
   begin_time: 2009-11-17 14:30:00
   end_time: 2009-11-17 15:45:00
@@ -428,7 +428,7 @@ sp10csc454_001:
   semester: spring2010
   room: EB1 1029
   professor: Darth Vader
-  number: 001
+  number: "001"
   days: TH
   begin_time: 2009-11-17 14:30:00
   end_time: 2009-11-17 15:45:00
@@ -439,7 +439,7 @@ sp10csc405_001:
   semester: spring2010
   room: EB2 1228
   professor: Groucho Marx
-  number: 001
+  number: "001"
   days: MW
   begin_time: 2009-11-17 16:00:00
   end_time: 2009-11-17 17:30:00
