--- a/config/database.yml
+++ b/config/database.yml
@@ -1,13 +1,6 @@
 # SQLite version 3.x
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
-
-#Development with postgres
-pgdev:
   adapter: postgresql
   host: localhost
   username: postgres
@@ -25,9 +18,12 @@ test: &test
   pool: 5
   timeout: 5000
 
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+development:
+  adapter: postgresql
+  host: localhost
+  username: postgres
+  password: Rome1231
+  database: freshtracks
   pool: 5
   timeout: 5000
 
