--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,11 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  host: localhost
+  username: postgres
+  password: Rome1231
+  database: freshtracks_test
   pool: 5
   timeout: 5000
 
