--- a/test/fixtures/completed_courses.yml
+++ b/test/fixtures/completed_courses.yml
@@ -1,3 +1,6 @@
 passed_csc116:
-  course_id: 1
   user: student
+  degree_requirement: java1
+  course: csc116
+  semester: fall2009
+  grade: 'Bplus'
