--- a/test/fixtures/sections.yml
+++ b/test/fixtures/sections.yml
@@ -204,7 +204,7 @@ fa09csc454_001:
   course: csc454
   semester: spring2011
   room: EB1 1029
-  professor: Darth Vader
+  professor: Rick Astley
   number: "001"
   days: TH
   begin_time: 2009-11-17 14:30:00
